--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,18 @@
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=kamran.yaqub4@gmail.com
-EMAIL_PASS=dtgr tdth umdz ddyp  # 16-char app password from Google
-EMAIL_FROM=kamran.yaqub4@gmail.com
-PORT=3001
+ EMAIL_HOST=smtp.gmail.com
+ EMAIL_PORT=587
+ EMAIL_USER=kamran.yaqub4@gmail.com
+ EMAIL_PASS=dtgr tdth umdz ddyp  # 16-char app password from Google
+ EMAIL_FROM=kamran.yaqub4@gmail.com
+ PORT=3001
+
+# Outlook / Microsoft 365 Email Settings
+#EMAIL_HOST=smtp.office365.com
+#EMAIL_PORT=587
+#EMAIL_USER=testcalc@mfsastra.com  # or your work email (e.g. kamran.yaqub@mfsuk.com)
+#EMAIL_PASS=BNkitkats56?
+#EMAIL_FROM=testcalc@mfsastra.com
+#PORT=3001
+
 
 # Supabase Configuration
 SUPABASE_URL=https://pfpzizlfbahddvzcleqm.supabase.co
